--- a/Advanced Git.ipynb
+++ b/Advanced Git.ipynb
@@ -457,7 +457,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fist line in file myfile\r\n",
+      "first line in file myfile\r\n",
       "second line in myfile is not much more interesting\r\n",
       "omg a third line\r\n"
      ]
@@ -493,7 +493,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fist line in file myfile\r\n",
+      "first line in file myfile\r\n",
       "second line in myfile is not much more interesting\r\n"
      ]
     }
@@ -528,7 +528,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fist line in file myfile\r\n"
+      "first line in file myfile\r\n"
      ]
     }
    ],
@@ -639,7 +639,7 @@
       "\u001b[1m--- a/myfile.txt\u001b[m\r\n",
       "\u001b[1m+++ b/myfile.txt\u001b[m\r\n",
       "\u001b[36m@@ -1,2 +1 @@\u001b[m\r\n",
-      " fist line in file myfile\u001b[m\r\n",
+      " first line in file myfile\u001b[m\r\n",
       "\u001b[31m-second line in myfile is not much more interesting\u001b[m\r\n"
      ]
     }
@@ -671,7 +671,7 @@
       "\u001b[1m--- a/myfile.txt\u001b[m\r\n",
       "\u001b[1m+++ b/myfile.txt\u001b[m\r\n",
       "\u001b[36m@@ -1,2 +1 @@\u001b[m\r\n",
-      " fist line in file myfile\u001b[m\r\n",
+      " first line in file myfile\u001b[m\r\n",
       "\u001b[31m-second line in myfile is not much more interesting\u001b[m\r\n"
      ]
     }
@@ -856,7 +856,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ignored files will not show up in ``git status`` and will not be added when doing ``git add -all``"
+    "Ignored files will not show up in ``git status`` and will not be added when doing ``git add --all``"
    ]
   },
   {
@@ -1128,7 +1128,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fist line in file myfile\r\n"
+      "first line in file myfile\r\n"
      ]
     }
    ],
@@ -1154,7 +1154,7 @@
     }
    ],
    "source": [
-    "echo \"another line commited to the original repo\" >> myfile.txt\n",
+    "echo \"another line committed to the original repo\" >> myfile.txt\n",
     "git add myfile.txt\n",
     "git commit -m \"new commit in the original repo\""
    ]
@@ -1735,7 +1735,7 @@
     }
    },
    "source": [
-    "## Bare repos are like your own personal github! (kinda)"
+    "## Bare repos are like your own personal GitHub! (kinda)"
    ]
   },
   {
@@ -2135,8 +2135,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fist line in file myfile\r\n",
-      "another line commited to the original repo\r\n",
+      "first line in file myfile\r\n",
+      "another line committed to the original repo\r\n",
       "new line in cloned repo\r\n"
      ]
     }
@@ -3141,8 +3141,8 @@
     "git checkout otherbranch\n",
     "git rebase basebranch\n",
     "```\n",
-    "Put everything in otherbranch that is not in basebranch on top of otherbranch.\n",
-    "(compute common root, cut of there)"
+    "Put everything in ``otherbranch`` that is not in ``basebranch`` on top of ``otherbranch``.\n",
+    "(compute common root, cut off there)"
    ]
   },
   {
@@ -3317,7 +3317,7 @@
     "- The branch to put the stuff on top of\n",
     "\n",
     "For the \"simple\" version 2 and 3 are the same.\n",
-    "For the ``--onto`` verion, you can specify 3 separately."
+    "For the ``--onto`` version, you can specify 3 separately."
    ]
   },
   {
